Adjusted CC to stop overflow of the dashboard div over the screen size.

--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 6fr; 
-    grid-template-rows: 1fr 7fr;
+    grid-template-columns: 1fr 6fr;
+    grid-template-rows: auto 1fr;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .header {
-    grid-column: 2;
+    grid-column-start: 2;
     display: grid;
     grid-template-columns: 2fr 1fr;
     align-items: center;
@@ -115,17 +117,13 @@ body {
 
 .dashboard {
     grid-column: 1;
-    grid-row: 1 / 4;
-    display: grid;
+    grid-row:  1 / span 2;
     background-color: #475569;
     color: white;
 }
 
 .dashboard > div {
     margin-left: 10px;
-    display: grid;
-    grid-template-columns: 0.5fr 2fr;
-    grid-template-rows: auto;
 }
 
 .dashboard > div a, li {
@@ -148,7 +146,8 @@ body {
 }
 
 .upper {
-    grid-row: 1;
+    display: flex;
+    align-items: center;
     margin-top: 10px;
     gap: 10px;
 }
@@ -157,7 +156,6 @@ body {
     grid-column: 1;
     width: 50px;
     fill: white;
-    margin: auto;
 }
 
 .dashboard ul {
@@ -191,8 +189,7 @@ body {
 .content {
     grid-column: 2;
     display: grid;
-    grid-template-columns: 4fr 1fr;
-    align-content: space-between;
+    grid-template-columns: 2fr 1fr;
     background-color: #e2e8f0;
     box-shadow: inset 0 4px 14px -8px #020617;
 }
@@ -200,34 +197,38 @@ body {
 .main {
     grid-column: 1;
     grid-row: 1;
-    display: grid;
-    grid-template-rows: 1fr 10fr;
     margin: 15px;
 }
 
 .title {
     grid-row: 1;
+    margin-top: 10px;
+    margin-left: 20px;
 }
 
 .grid {
     grid-row: 2;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 40px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    column-gap: 1px;
+    gap: 20px;
+    margin-top: 30px;
+    margin-left: 20px;
 }
 
 .grid .project {
     background-color: white;
     border-left: 8px solid;
     border-color: #0ea5e9;
-    width: 350px; /* Temporary */
+    width: 450px; /* Temporary */
     height: 200px;
     border-radius: 10px;
     padding: 10px;
 }
 
 .grid .project:hover {
-    transform: scale(1.05);
+    background-color: #cbd5e1;
+    cursor: pointer;
 }
 
 .project {
@@ -243,4 +244,11 @@ body {
 
 .project-icons * {
     width: 8%;
+    margin: 5px;
 }
+
+.project-icons *:hover {
+    fill: #475569;
+}
+
+
